[package]
authors = ["Alex Whitney <adwhit@fastmail.com>"]
name = "thruster"
version = "0.1.0"

[dependencies]
error-chain = "0.10.0"
handlebars = "0.28.1"
openapi = { git = "https://github.com/softprops/openapi" }
rocket = "0.3.0"
rocket_codegen = "0.3.0"
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.2"
serde_yaml = "0.7.1"
